# QingJuan

./: .gitignore  CHANGELOG.md  README.md  index.html  key  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
python-backend/: build_sidecar.py  requirements.txt
python-backend/app/: __init__.py  db.py  main.py  models.py  scraper.py
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/entry/: main.ts
src/lib/: mock.ts
src/services/: api.ts  desktop.ts
src/ui/: AppShell.vue  style.css
