[package]
name = "qingjuan"
version = "0.2.0"
description = "青卷桌面端"
authors = ["qingjuan"]
edition = "2021"

[lib]
name = "qingjuan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2.7"
tauri-plugin-shell = "2.3.1"
